// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#F5FCFF",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "fontSize": 20,
        "margin": 10,
        "textAlign": "center",
      }
    }
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#333333",
        "marginBottom": 5,
        "textAlign": "center",
      }
    }
  >
    This is a React Native snapshot for login page.
  </Text>
</View>
`;

exports[`renders correctly 2`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexGrow": 1,
        "marginTop": 50,
      }
    }
  >
    <Image
      source={1}
      style={
        Object {
          "height": 50,
          "width": 150,
        }
      }
    />
  </View>
  <View>
    <View
      style={
        Object {
          "padding": 20,
        }
      }
    >
      <TextInput
        allowFontScaling={true}
        placeholder="Username or Email"
        placeholderTextColor="rgba(255,255,255,0.9)"
        style={
          Object {
            "backgroundColor": "rgba(0,0,0,0.5)",
            "height": 40,
            "marginBottom": 20,
            "paddingHorizontal": 10,
          }
        }
      />
      <TextInput
        allowFontScaling={true}
        placeholder="Password"
        placeholderTextColor="rgba(255,255,255,0.9)"
        style={
          Object {
            "backgroundColor": "rgba(0,0,0,0.5)",
            "height": 40,
            "marginBottom": 20,
            "paddingHorizontal": 10,
          }
        }
      />
    </View>
  </View>
  <View
    style={
      Object {
        "height": "80%",
        "width": "100%",
      }
    }
  >
    <Image
      source={1}
      style={
        Array [
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          Object {
            "height": "80%",
            "width": "100%",
          },
          undefined,
        ]
      }
    />
  </View>
</View>
`;

exports[`renders correctly for intro 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#F5FCFF",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "fontSize": 20,
        "margin": 10,
        "textAlign": "center",
      }
    }
  >
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#333333",
        "marginBottom": 5,
        "textAlign": "center",
      }
    }
  >
    This is a React Native snapshot for main page.
  </Text>
</View>
`;

exports[`renders correctly for login 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexGrow": 1,
        "marginTop": 50,
      }
    }
  >
    <Image
      source={1}
      style={
        Object {
          "height": 50,
          "width": 150,
        }
      }
    />
  </View>
  <View>
    <View
      style={
        Object {
          "padding": 20,
        }
      }
    >
      <TextInput
        allowFontScaling={true}
        placeholder="Username or Email"
        placeholderTextColor="rgba(255,255,255,0.9)"
        style={
          Object {
            "backgroundColor": "rgba(0,0,0,0.5)",
            "height": 40,
            "marginBottom": 20,
            "paddingHorizontal": 10,
          }
        }
      />
      <TextInput
        allowFontScaling={true}
        placeholder="Password"
        placeholderTextColor="rgba(255,255,255,0.9)"
        style={
          Object {
            "backgroundColor": "rgba(0,0,0,0.5)",
            "height": 40,
            "marginBottom": 20,
            "paddingHorizontal": 10,
          }
        }
      />
    </View>
  </View>
  <View
    style={
      Object {
        "height": "80%",
        "width": "100%",
      }
    }
  >
    <Image
      source={1}
      style={
        Array [
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          Object {
            "height": "80%",
            "width": "100%",
          },
          undefined,
        ]
      }
    />
  </View>
</View>
`;